--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "google-maps-react": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lottie": "^1.2.3",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
